--- a/src/app/components/layout/content/content.component.html
+++ b/src/app/components/layout/content/content.component.html
@@ -3,7 +3,9 @@
 		<div class="container">
 			<p>content works!</p>
 			<div class="row" *ngIf="!isLoggedIn">
-				<app-login></app-login>
+				<div style="margin: auto;">
+					<app-login (onLoginSuccess)="doOnLoginSuccess($event)"></app-login>
+				</div>
 			</div>
 			<div class="row" *ngIf="isLoggedIn">
 				<app-dashboard></app-dashboard>
