--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,21 +1,23 @@
-<p>login works!</p>
 
 <div class="card wrapper">
-	<div class="panel panel-default form">
-		<div class="panel panel-heading">
-			<h3 class="panel-title">Sign in</h3>
+	<div class="card-content">
+		<div class="card-header">
+			<h3 class="card-title">Sign in</h3>
 		</div>
-		<div class="panel panel-body">
+		<div class="card-body">
 			<div class="form-group">
-				<label>Username</label>
-				<input type="text" class="form-control">
+				<label>Username:</label><span class="required-field">*</span>
+				<input type="text" [value]="username" class="form-control" (change)="username=$event.target.value;">
 			</div>
 			<div class="form-group">
-				<label>Password</label>
-				<input type="password" class="form-control">
+				<label>Password:</label><span class="required-field">*</span>
+				<input type="password" [value]="password" (change)="password=$event.target.value;" class="form-control">
+			</div>
+			<div class="form-group btn-danger" *ngIf="isNotValid">
+				<span class="required-field">{{ errorMessage }}</span>
 			</div>
 		</div>
-		<div class="panel panel-footer">
+		<div class="card-footer">
 			<div class="form-group">
 				<a class="btn btn-primary" (click)="doLogin()">Login</a>
 			</div>
