--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
-<app-content></app-content>
+<app-header (onLogout)="doLogout($event)"></app-header>
+<app-content [isLoggedIn]="isLoggedIn" (onLogin)="doLogin($event)"></app-content>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
