--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,16 +1,55 @@
 <div class="row">
 	<div class="col-12">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Dropdown
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="#">Disabled</a>
+					</li>
+				</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
+			</div>
+		</nav>
 		<mat-toolbar>
+
 			<mat-toolbar-row>
-				<button mat-icon-button>
-					<mat-icon >menu</mat-icon>
-				</button>
+				<a mat-button [routerLink]="'/dashboard'">
+					<button mat-icon-button>
+						<mat-icon >menu</mat-icon>
+					</button>
+				</a>
 				<h1>Poll Engine</h1>
+				
 				<span class="menu-spacer"></span>
 				<div>
 					<a mat-button [routerLink]="'/polls'"> Polls </a>
 					<a mat-button [routerLink]="'/create-poll'"> Create poll </a>
-					<a mat-button [routerLink]="'/poll'"> Respond to poll </a>
+					<a mat-button [routerLink]="'/respond-poll'"> Respond to poll </a>
 					<a mat-button [routerLink]="'/users'"> Create User </a>
 					<a mat-button [routerLink]="'/activities'"> Activities </a>
 					<a mat-button href="#" (click)="logout()">Logout</a>
