--- a/src/app/components/polls/polls-list/polls-list.component.html
+++ b/src/app/components/polls/polls-list/polls-list.component.html
@@ -10,6 +10,9 @@
 		<div class="col-1">
 			<button class="btn btn-primary">Search</button>
 		</div>
+		<div class="col-7">
+			<a href="/create-poll" class="btn btn-sm btn-primary">Create new Poll</a>
+		</div>
 	</div>
 	<div class="table" *ngIf="dataSource.length > 0">
 		
@@ -35,28 +38,22 @@
 						<td> {{item.reference_id}} </td>
 						<td></td>
 						<td></td>
-						<td></td>
+						<td><input type="checkbox" class="form-control" [checked]="false" aria-label="Completed"></td>
 						<td>
-							<a href="#" class="btn btn-sm btn-primary">Add</a>
-							<a href="#" class="btn btn-sm btn-secondary">Edit</a>
+							<a href="#" class="btn btn-sm btn-primary">Edit</a>
 							<a href="#" class="btn btn-sm btn-danger">Delete</a>
-							<a href="#" class="btn btn-sm btn-default">View</a>
+							<a href="#" class="btn btn-sm btn-secondary">View</a>
 						</td>
 					</tr>
 				</tbody>
 				<tfoot>
 					<tr class="thead-dark">
-						<th> No. of records {{ dataSource.length }}</th>
-						<th> </th>
-						<th> </th>
-						<th> </th>
-						<th> </th>
-						<th> </th>
-						<th> </th>
-						<th> </th>
+						<th colspan="2"> No. of records {{ dataSource.length }}</th>
+						<th colspan="6">   </th>
+
 					</tr>
 				</tfoot>
 			</table>
-
 		</div>
 	</div>
+</div>
