--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -11,36 +11,53 @@
 							<div class="row">
 								<div class="col-12">
 									<div class="form">
-										<div class="form-group">
-											<label class="control-label">Poll Id</label><br>
-											<input type="text" class="my-form-control-id" [readonly]="true" [disabled]="true">
+										<div class="row">
+											<div class="col-12">
+												<div class="form-group">
+													<label class="control-label">Poll Id</label><br>
+													<input type="text" class="my-form-control-id" [readonly]="true" [disabled]="true">
+												</div>
+											</div>
 										</div>
-										<div class="form-group">
-											<label class="control-label">Title</label>
-											<input type="text" class="form-control" >
+										<div class="row">
+											<div class="col-lg-8 col-md-8 col-sm-12">
+												<div class="form-group">
+													<label class="control-label">Title</label>
+													<input type="text" class="form-control" >
+												</div>
+											</div>
+											<div class="col-lg-4 col-md-4 col-sm-12">
+												<div class="form-group date">
+													<label class="control-label">Creation Date</label>
+													<input type="text" data-provide="datepicker" class="form-control datepicker" >		
+												</div>
+											</div>
 										</div>
-										<div class="form-group date">
-											<label class="control-label">Creation Date</label>
-											<input type="text" data-provide="datepicker" class="form-control datepicker" >
-											
-										</div>
-										<div class="form-group">
-											<label class="control-label">Client</label>
-											<input type="text" class="form-control" >
-										</div>
-										<div class="form-group">
-											<label class="control-label">Due Date</label>
-											<input type="text" class="form-control" >
-										</div>
-										<div class="form-group">
-											<label class="control-label">Status</label>
-											<select class="form-control">
-												<option value="1">Created</option>
-												<option value="2">Scheduled</option>
-												<option value="3">Presented</option>
-												<option value="4">Evaluated</option>
-												<option value="5">Completed</option>
-											</select>
+										<div class="row">
+											<div class="col-lg-4 col-md-4 col-sm-12">	
+												<div class="form-group">
+													<label class="control-label">Client</label>
+													<input type="text" class="form-control" >
+												</div>
+											</div>
+											<div class="col-lg-4 col-md-4 col-sm-12">
+												<div class="form-group">
+													<label class="control-label">Due Date</label>
+													<input type="text" class="form-control" >
+												</div>
+											</div>
+											<div class="col-lg-4 col-md-4 col-sm-12">
+												<div class="form-group">
+													<label class="control-label">Status</label>
+													<select class="form-control">
+														<option value="1">Created</option>
+														<option value="2">Scheduled</option>
+														<option value="3">Presented</option>
+														<option value="4">Evaluated</option>
+														<option value="5">Completed</option>
+													</select>
+												</div>
+											</div>
 										</div>
 										<div class="form-group">
 											<label class="control-label">Questions</label>
