--- a/src/app/components/polls/poll-form/poll-form.component.css
+++ b/src/app/components/polls/poll-form/poll-form.component.css
@@ -13,4 +13,11 @@
     padding: 0.375rem 0.75rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     width: 20%;
- }
+}
+
+.my-date-picker {
+    width: 80%;
+    height: calc(1.5em + 0.75rem + 2px);
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
