--- a/src/app/components/commons/grids/basic-grid/basic-grid.component.html
+++ b/src/app/components/commons/grids/basic-grid/basic-grid.component.html
@@ -17,7 +17,7 @@
 	</tbody>
 	<tfoot>
 		<tr class="thead-dark" >
-			<th [colspan]="gridData.rows.length+1">Total of rows: {{ gridData.rows.length }}</th>
+			<th [attr.colspan]="gridData.rows.length+1">Total of rows: {{ gridData.rows.length }}</th>
 		</tr>	
 	</tfoot>
 </table>
