completamos funcionalidad del grid generico, continuamos con ABC de encuestas.

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -11,23 +11,12 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Dropdown
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Disabled</a>
-					</li>
+					<li><a mat-button [routerLink]="'/polls'"> Polls </a></li>			
+					<li><a mat-button [routerLink]="'/create-poll'"> Create poll </a></li>
+					<li><a mat-button [routerLink]="'/respond-poll'"> Respond to poll </a></li>
+					<li><a mat-button [routerLink]="'/users'"> Create User </a></li>
+					<li><a mat-button [routerLink]="'/activities'"> Activities </a></li>
+					<li><a mat-button href="#" (click)="logout()">Logout</a></li>
 				</ul>
 				<form class="form-inline my-2 my-lg-0">
 					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -35,26 +24,6 @@
 				</form>
 			</div>
 		</nav>
-		<mat-toolbar>
-
-			<mat-toolbar-row>
-				<a mat-button [routerLink]="'/dashboard'">
-					<button mat-icon-button>
-						<mat-icon >menu</mat-icon>
-					</button>
-				</a>
-				<h1>Poll Engine</h1>
-				
-				<span class="menu-spacer"></span>
-				<div>
-					<a mat-button [routerLink]="'/polls'"> Polls </a>
-					<a mat-button [routerLink]="'/create-poll'"> Create poll </a>
-					<a mat-button [routerLink]="'/respond-poll'"> Respond to poll </a>
-					<a mat-button [routerLink]="'/users'"> Create User </a>
-					<a mat-button [routerLink]="'/activities'"> Activities </a>
-					<a mat-button href="#" (click)="logout()">Logout</a>
-				</div>
-			</mat-toolbar-row>
-		</mat-toolbar>
+		
 	</div>
 </div>
