--- a/src/app/components/polls/grid-question-options/grid-question-options.component.html
+++ b/src/app/components/polls/grid-question-options/grid-question-options.component.html
@@ -1,5 +1,9 @@
 <app-basic-grid 
 	[columnNames]="gridQuestionsColumnNames" 
-	[gridData]="gridData">
+	[gridData]="gridData"
+	[showActionsColumn]="showActionsColumn"
+	[showSelectColumn]="showSelectColumn"
+	[idFieldName]="idFieldName"
+	>
 	
 </app-basic-grid>
