se agrega ventana de edicion de pregunta para manejo en modo de dialogo popup modal.

--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -75,7 +75,7 @@
 										<div class="row">
 											<div class="col-12">
 												<div class="form-group">
-													<button class="btn btn-primary mr-2">Add Question</button>
+													<button type="button" id="addQuestionBtn" class="btn btn-primary mr-2" data-toogle="modal" data-target="questionFormDialog">Add Question</button>
 													<button class="btn btn-secondary mr-2">Edit Question</button>
 													<button class="btn btn-danger mr-2">Delete Question</button>
 												</div>
@@ -101,3 +101,7 @@
 <br>
 <br>
 <br>
+
+
+<app-question-form></app-question-form>
+
