--- a/src/app/components/polls/poll-form/question-form/question-form.component.html
+++ b/src/app/components/polls/poll-form/question-form/question-form.component.html
@@ -1,30 +1,34 @@
 <form [formGroup]="questionForm">
   <div class="modal-header">
     <h4 class="modal-title">Create new Question</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
     <div class="row">
       <div class="col-12">
+        <div class="alert alert-success" role="alert" *ngIf="questionSaved == true">
+          {{ saveMessage }}
+        </div>
+      </div>
+      <div class="col-12">
         <div class="form">
           <div class="form-group">
             <label class="control-label">Question Id:</label><br>
-            <input type="text" formControlName="questionId" class="form-control my-form-control-id" [readonly]="true"
-                   [disabled]="true">
+            <input type="text" formControlName="questionId" class="form-control my-form-control-id" [readonly]="true">
           </div>
           <div class="form-group">
             <label class="control-label">Question Text:</label><span class="required-field">&nbsp;*</span>
             <input type="text" formControlName="questionText" class="form-control">
-            <div class="alert alert-danger" role="alert" *ngIf="questionForm.controls['questionText'].valid == false">
+            <div class="alert alert-danger" role="alert" *ngIf="submitted && questionForm.controls['questionText'].valid == false">
               {{ questionForm.controls['questionText'].errors.required ? "Question Text is required!" : ""  }}
             </div>
           </div>
           <div class="form-group date">
             <label class="control-label">Value:</label><span class="required-field">&nbsp;*</span>
             <input type="text" formControlName="questionValue" class="form-control datepicker">
-            <div class="alert alert-danger" role="alert" *ngIf="questionForm.controls['questionValue'].valid == false">
+            <div class="alert alert-danger" role="alert" *ngIf="submitted && questionForm.controls['questionValue'].valid == false">
               {{ questionForm.controls['questionValue'].errors.required ? "Question Value is required!" : "" }}
             </div>
           </div>
@@ -32,7 +36,7 @@
           <div class="form-group">
             <label class="control-label">Answer:</label><span class="required-field">&nbsp;*</span>
             <input type="text" formControlName="questionAnswer" class="form-control">
-            <div class="alert alert-danger" role="alert" *ngIf="questionForm.controls['questionAnswer'].valid == false">
+            <div class="alert alert-danger" role="alert" *ngIf="submitted && questionForm.controls['questionAnswer'].valid == false">
               {{ questionForm.controls['questionAnswer'].errors.required ? "Question Answer is required!" : ""  }}
             </div>
           </div>
@@ -45,11 +49,12 @@
     </div>
   </div>
   <div class="modal-footer">
-    <label class="control-label mr-2" for="saveAndContinueChx">Save and countinue</label>
-    <input id="saveAndContinueChx" type="checkbox" class="checkbox">
-    <button class="btn btn-primary ml-2 mr-2" (click)="doSaveQuestionClick($event)">Save Question</button>
+    <label class="control-label mr-2" for="saveAndContinueChx">Save and continue</label>
+    <input id="saveAndContinueChx" value="true" [checked]="chkSaveAndContinue" (change)="doSaveAndContinueCheckOnChange($event)"
+           type="checkbox" class="checkbox">
+    <button class="btn btn-primary ml-2 mr-2" (click)="doSaveQuestionClick($event)" >Save Question</button>
     <button class="btn btn-danger mr-2">Delete Question</button>
-    <button class="btn btn-secondary mr-2" (click)="modal.close('Close click')">Cancel</button>
+    <button class="btn btn-secondary mr-2" (click)="modal.close()">Cancel</button>
   </div>
 
 </form>
