--- a/src/app/components/polls/grid-question-options/grid-question-options.component.html
+++ b/src/app/components/polls/grid-question-options/grid-question-options.component.html
@@ -4,6 +4,8 @@
 	[showActionsColumn]="showActionsColumn"
 	[showSelectColumn]="showSelectColumn"
 	[idFieldName]="idFieldName"
+	[selectedIndex]="selectedIndex"
+	(onSelectionChange)="doOnSelectionChange($event)"
 	>
 	
 </app-basic-grid>
