agregamos funcionalidad para conectar la pantalla con el sevicio rest para polls

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -12,7 +12,7 @@
 						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li><a mat-button [routerLink]="'/polls'"> Polls </a></li>			
-					<li><a mat-button [routerLink]="'/create-poll'"> Create poll </a></li>
+					<li><a mat-button href="/create-poll"> Create poll </a></li>
 					<li><a mat-button [routerLink]="'/respond-poll'"> Respond to poll </a></li>
 					<li><a mat-button [routerLink]="'/users'"> Create User </a></li>
 					<li><a mat-button [routerLink]="'/activities'"> Activities </a></li>
