--- a/src/app/components/polls/polls-list/polls-list.component.html
+++ b/src/app/components/polls/polls-list/polls-list.component.html
@@ -11,34 +11,35 @@
 			<button class="btn btn-primary">Search</button>
 		</div>
 		<div class="col-7">
-			<a href="/create-poll" class="btn btn-sm btn-primary">Create new Poll</a>
+			<a href="#" class="btn btn-secondary" (click)="doCreateNewPoll($event)" >Create new Poll</a>
 		</div>
 	</div>
-	<div class="table" *ngIf="dataSource.length > 0">
+	<div class="table" *ngIf="mode =='list'">
 		
 		<div class="mat-elevation-z5">
 			<table style="width:100%" class="table table-striped table-bordered table-hover">
 				<thead class="thead-dark">
 					<tr>
-						<th>  Id </th>
+						<th> Id </th>
 						<th> Title </th>
 						<th> Num of Questions </th>
-						<th> Creation Date </th>
 						<th> Client's Name </th>
+						<th> Creation Date </th>
 						<th> Due date</th>
-						<th> Completed </th>
+						<th> Status </th>
 						<th> Actions </th>
 					</tr>
 				</thead>
 				<tbody>
+					<tr *ngIf="dataSource.length == 0"><td colspan="8">No data ...</td></tr>
 					<tr *ngFor="let item of dataSource">
-						<td> {{item.id}} </td>
-						<td> {{item.activity_module}} </td>
-						<td> {{item.datetime}} </td>
-						<td> {{item.reference_id}} </td>
-						<td></td>
-						<td></td>
-						<td><input type="checkbox" class="form-control" [checked]="false" aria-label="Completed"></td>
+						<td> {{item.pollId}} </td>
+						<td> {{item.title}}</td>
+						<td> {{item.questions.length}}</td>
+						<td> {{item.clientName}} </td>
+						<td> {{item.creationDate}} </td>
+						<td> {{item.dueDate}} </td>
+						<td> {{statusesList[item.status]}} </td>
 						<td>
 							<a href="#" class="btn btn-sm btn-primary">Edit</a>
 							<a href="#" class="btn btn-sm btn-danger">Delete</a>
@@ -55,5 +56,11 @@
 				</tfoot>
 			</table>
 		</div>
+	</div>
+	<div class="create/poll" *ngIf="mode =='create'">
+		<app-poll-create [poll]="poll"
+			(onSave)="doOnSavePoll($event)"
+		>
+		</app-poll-create>
 	</div>
 </div>
