--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -139,7 +139,7 @@
 									type="checkbox" class="checkbox">
 									<button class="btn btn-primary ml-2 mr-2" (click)="doOnClickSavePoll($event)" >Save Poll</button>
 									<button class="btn btn-danger mr-2"  >Delete Poll</button>
-									<button class="btn btn-secondary mr-2" >Cancel</button>
+									<button class="btn btn-secondary mr-2" (click)="doOnCancel($event)" >Cancel</button>
 								</div>
 							</div>
 						</form>
