--- a/src/app/components/polls/polls-list/polls-list.component.html
+++ b/src/app/components/polls/polls-list/polls-list.component.html
@@ -1,6 +1,13 @@
 <div class="content">
 	<h1>Polls</h1>
 	<div class="row">
+		<div class="col-12">
+			<div class="alert alert-success" role="alert" *ngIf="dataSavedOK">
+				<span>Poll was saved successfully!</span>
+			</div> 
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-1">
 			<label class="label">Look for:</label>
 		</div>
@@ -14,53 +21,61 @@
 			<a href="#" class="btn btn-secondary" (click)="doCreateNewPoll($event)" >Create new Poll</a>
 		</div>
 	</div>
-	<div class="table" *ngIf="mode =='list'">
-		
-		<div class="mat-elevation-z5">
-			<table style="width:100%" class="table table-striped table-bordered table-hover">
-				<thead class="thead-dark">
-					<tr>
-						<th> Id </th>
-						<th> Title </th>
-						<th> Num of Questions </th>
-						<th> Client's Name </th>
-						<th> Creation Date </th>
-						<th> Due date</th>
-						<th> Status </th>
-						<th> Actions </th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr *ngIf="dataSource.length == 0"><td colspan="8">No data ...</td></tr>
-					<tr *ngFor="let item of dataSource">
-						<td> {{item.pollId}} </td>
-						<td> {{item.title}}</td>
-						<td> {{item.questions.length}}</td>
-						<td> {{item.clientName}} </td>
-						<td> {{item.creationDate}} </td>
-						<td> {{item.dueDate}} </td>
-						<td> {{statusesList[item.status]}} </td>
-						<td>
-							<a href="#" class="btn btn-sm btn-primary">Edit</a>
-							<a href="#" class="btn btn-sm btn-danger">Delete</a>
-							<a href="#" class="btn btn-sm btn-secondary">View</a>
-						</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr class="thead-dark">
-						<th colspan="2"> No. of records {{ dataSource.length }}</th>
-						<th colspan="6">   </th>
+	<div class="row">
+		<div class="col-12">
+			<div class="table" *ngIf="mode =='list'">
+				<div class="mat-elevation-z5">
+					<table style="width:100%" class="table table-striped table-bordered table-hover">
+						<thead class="thead-dark">
+							<tr>
+								<th> Id </th>
+								<th> Title </th>
+								<th> Num of Questions </th>
+								<th> Client's Name </th>
+								<th> Creation Date </th>
+								<th> Due date</th>
+								<th> Status </th>
+								<th> Actions </th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr *ngIf="dataSource.length == 0"><td colspan="8">No data ...</td></tr>
+							<tr *ngFor="let item of dataSource">
+								<td> {{item.pollId}} </td>
+								<td> {{item.title}}</td>
+								<td> {{item.questions.length}}</td>
+								<td> {{item.clientName}} </td>
+								<td> {{item.creationDate}} </td>
+								<td> {{item.dueDate}} </td>
+								<td> {{statusesList[item.status]}} </td>
+								<td>
+									<a href="#" class="btn btn-sm btn-primary">Edit</a>
+									<a href="#" class="btn btn-sm btn-danger">Delete</a>
+									<a href="#" class="btn btn-sm btn-secondary">View</a>
+								</td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr class="thead-dark">
+								<th colspan="2"> No. of records {{ dataSource.length }}</th>
+								<th colspan="6">   </th>
 
-					</tr>
-				</tfoot>
-			</table>
+							</tr>
+						</tfoot>
+					</table>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="create/poll" *ngIf="mode =='create'">
-		<app-poll-create [poll]="poll"
-			(onSave)="doOnSavePoll($event)"
-		>
-		</app-poll-create>
+	<div class="row">
+		<div class="col-12">
+			<div class="create-poll" *ngIf="mode =='create'">
+				<app-poll-create [poll]="poll"
+				(onSave)="doOnSavePoll($event)"
+				(onClose)="doOnCloseCreatePoll($event)"
+				>
+			</app-poll-create>
+		</div>
 	</div>
 </div>
+
